syntax = "proto3";

option go_package = "payment/payment";

package proto;

// Payment - интерфейс экспортируемого сервиса 
service Payment {
    // TopUpAccount - RPC, которая пополняет аккаунт
    // переданного ID на переданную Amount.
    rpc UpSum(UpRequest) returns(enum){}
    // TopUpAccount - RPC, которая переводит Amount средств
    // с первого ID на второй.
    rpc SumTransfer(TransferRequest) returns (enum) {}
}

// Запрос на пополнение баланса с RecipientID на указанную Sum.
message UpRequest {
    int64 ID = 1;
    int64 Sum = 2;
}

// Запрос на перевод указанной Sum с PayerID на RecipientID.
message TransferRequest {
    int64 SenderID = 1;
    int64 GeterID = 2;
    int64 Sum = 3;
}

// Сообщение об ошибке. Пустая строка в случае успеха.
message enum {}